--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+*::after,
+::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  background-image: -webkit-linear-gradient(#00000021, transparent, #00000021);
+  background-repeat: no-repeat;
+  background-size: contain;
+  font-size: 16px;
+  padding: 0px;
+  margin: 0px;
+  min-width: 350px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.less1000px {
+  display: none;
+}
+
+.show1000px {
+  display: block;
+}
+
+
+@media only screen and (max-width:999px) {
+  .less1000px {
+    display: block;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .show1000px {
+    display: none;
   }
 }
