--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,3 +52,104 @@ html {
   padding-right: 10px;
   border-radius: 2px;
 }
+
+/* Page Not Found */
+
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+  font-family: 'Arvo', serif;
+}
+
+.page_404 img {
+  width: 100%;
+}
+
+.four_zero_four_bg {
+
+  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+  height: 400px;
+  background-position: center;
+}
+
+
+.four_zero_four_bg h1 {
+  font-size: 80px;
+}
+
+.four_zero_four_bg h3 {
+  font-size: 80px;
+}
+
+.link_404 {
+  color: #fff !important;
+  padding: 10px 20px;
+  background: #39ac31;
+  margin: 20px 0;
+  display: inline-block;
+}
+
+.contant_box_404 {
+  margin-top: -50px;
+}
+
+/* Page Not Found */
+
+/* sideBar */
+
+.sideBar {
+  display: block;
+}
+
+.sideBarButton {
+  display: none;
+}
+
+.offcanvas-backdrop {
+  display: none !important;
+}
+
+@media only screen and (max-width:750px) {
+  .sideBar {
+    display: none;
+  }
+
+  .sideBarButton {
+    display: block;
+  }
+}
+
+/* sideBar */
+
+/* subList */
+
+.subList {
+  transition: .2s ease-in-out;
+  cursor: pointer;
+}
+
+.subList:hover {
+  background-color: rgb(0, 255, 157);
+}
+
+/* subList */
+
+/* scrolbar */
+
+::-webkit-scrollbar{
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+background: rgb(7, 132, 163);
+border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover{
+background: #00b348;
+border-radius: 50px;
+}
+
+/* scrolbar */
