--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@ html {
   padding: 0px;
   margin: 0px;
   min-width: 350px;
+  scroll-behavior: smooth;
 }
 
 .less1000px {
@@ -126,10 +127,25 @@ html {
 .subList {
   transition: .2s ease-in-out;
   cursor: pointer;
+  border-bottom: 5px solid transparent;
+  /* border-top-right-radius:30px ; */
+  border-top-left-radius:20px ;
+  border-bottom-right-radius:20px ;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .subList:hover {
-  background-color: rgb(0, 255, 157);
+  padding-left: 8% !important;
+  padding-right: 5% !important;
+  background-color: #1c66a8d2;
+  border-bottom: 5px solid rgba(0, 0, 0, 0.433);
+  color: white !important;
+}
+
+.bi-arrow-right-short{
+  color: white;
 }
 
 /* subList */
@@ -137,18 +153,20 @@ html {
 /* scrolbar */
 
 ::-webkit-scrollbar{
-  width: 8px;
+  width: 10px;
 }
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px rgb(0, 0, 0); 
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb{
-background: rgb(7, 132, 163);
+background: #3cb3d7;
 border-radius: 50px;
+border: 1px solid;
+cursor: pointer;
 }
 ::-webkit-scrollbar-thumb:hover{
-background: #00b348;
+background: #00b34885;
 border-radius: 50px;
 }
 
