--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -121,6 +121,76 @@ html {
   }
 }
 
+/* Loading */
+.loadingBase {
+  display: flex;
+  height: -webkit-fill-available;
+  justify-content: center;
+  align-items: center;
+  background: #47b8d9;
+}
+
+.wave {
+  width: 5px;
+  height: 100px;
+  background: linear-gradient(45deg, rgb(0, 0, 0), #fff);
+  margin: 10px;
+  animation: wave 1s linear infinite;
+  border-radius: 20px;
+}
+
+.wave:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.wave:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+.wave:nth-child(4) {
+  animation-delay: 0.3s;
+}
+
+.wave:nth-child(5) {
+  animation-delay: 0.4s;
+}
+
+.wave:nth-child(6) {
+  animation-delay: 0.5s;
+}
+
+.wave:nth-child(7) {
+  animation-delay: 0.6s;
+}
+
+.wave:nth-child(8) {
+  animation-delay: 0.7s;
+}
+
+.wave:nth-child(9) {
+  animation-delay: 0.8s;
+}
+
+.wave:nth-child(10) {
+  animation-delay: 0.9s;
+}
+
+@keyframes wave {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+/* Loading */
+
 
 
 /* sideBar */
@@ -473,6 +543,11 @@ figure:hover+span {
 .hover14 figure {
   position: relative;
   width: 320px;
+  z-index: 10;
+}
+.hover14_load center {
+  position: relative;
+  width: 320px;
 }
 
 .hover14 figure::before {
@@ -490,7 +565,29 @@ figure:hover+span {
   transform: skewX(-25deg);
 }
 
+.hover14_load::before{
+  position: absolute;
+  top: 0;
+  left: -75%;
+  z-index: 2;
+  display: block;
+  content: '';
+  width: 50%;
+  height: 100%;
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+  -webkit-transform: skewX(-25deg);
+  transform: skewX(-25deg);
+  -webkit-animation: shine .75s;
+  animation: shine .75s linear infinite;
+  z-index: 1;
+}
+
 .hover14 figure:hover::before {
+  -webkit-animation: shine .75s;
+  animation: shine .75s;
+}
+.hover14_load {
   -webkit-animation: shine .75s;
   animation: shine .75s;
 }
