--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -755,15 +755,14 @@ figure:hover+span {
 .productSample {
   transition: .1s ease-in-out;
   cursor: pointer;
-  border-top-left-radius: 8px;
   border-bottom-right-radius: 8px;
-  border-top-right-radius: 8px;
 }
 
 .productSample:hover {
   box-shadow: 4px 7px 12px 2px #0000001f;
+  background-image: linear-gradient(24deg, #00b2ff40, #00ffea36, #00aaff1c);
   transform: scale(1.01);
-
+  border: 1px solid rgba(6, 140, 174, 0.558) !important;
 }
 
 /* Smaple Product */
