--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -782,7 +782,7 @@ figure:hover+span {
 .productSample:hover {
   box-shadow: 4px 7px 12px 2px #0000001f;
   background-image: linear-gradient(24deg, #00b2ff40, #00ffea36, #00aaff1c);
-  transform: scale(1.01);
+  /* transform: scale(1.01); */
   border: 1px solid rgba(6, 140, 174, 0.558) !important;
 }
 
