--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,36 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Poppins:wght@300&family=Roboto&display=swap');
+
+/* @import "compass/css3"; */
+
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro');
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+
+body {
+  font-family: "Maven Pro", sans-serif;
+  color: #333;
+  text-align: center;
+}
+
+.productSample:hover + .pageflip {
+  display: block;
+  position: absolute;
+  z-index: 25;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+  background-image: url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgi…pZHRoPSIxMDAlIiBoZWlnaHQ9IjEwMCUiIGZpbGw9InVybCgjZ3JhZCkiIC8+PC9zdmc+IA==');
+  background-size: 100%;
+  background-image: linear-gradient(to right bottom,#aaa 50%,#fff 51%);
+  transition: all 0.3s;
+}
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
