About Page Added

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -759,6 +759,7 @@ figure:hover+span {
 
 .mainBase::-webkit-scrollbar {
   width: 5px;
+  scroll-behavior: smooth
 }
 
 .mainBase::-webkit-scrollbar-track {
