Updated Backend and frontend end

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,12 @@ html {
   font-family: "Poppins" !important;
 }
 
+
+.setLoading {
+  pointer-events: none;
+  cursor: progress;
+}
+
 body {
   font-family: "Poppins" !important;
 }
